--- a/style.css
+++ b/style.css
@@ -1,28 +1,21 @@
-img{
-    height: 100px;
-    width: 350px;
-    background-color: #ffff;
+.navbar{
+    background-color: white;
 }
 h3{
     text-align: center;
 }
-input{
-    border: 0ch;
-}
-a img{
-    width: 50;
-    height: 28;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.logo{
-    width: 100px;
-    height: 50px;
-}
 li a{
     display: block;
     text-align: center;
-    padding: 14px;
+    padding-left: 40px;
     text-decoration: none;
+}
+.idx{
+    height: 100px;
+    margin-right: 200px;
+}
+.krj{
+    height: 25px;
+    margin-right: 30px;
+
 }
